--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -130,11 +130,11 @@ La cantidad de información manejada por las comunidades, redes sociales, buscad
 		\end{center}	
 		\item Verificar que el contenedor se este ejecutando correctamente mediante el comando:
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/9}
+		\includegraphics[width=7cm]{./Imagenes/9}
 		\end{center}	
                      \item Proceder a verificar la imagen con el siguiente comando:
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/15}
+		\includegraphics[width=7cm]{./Imagenes/15}
 		\end{center}	
                      \item Seguidamente ejecutar el comando.Como respuesta se visualizará un ID que corresponde al contenedor:
                      \begin{center}
@@ -154,34 +154,34 @@ La cantidad de información manejada por las comunidades, redes sociales, buscad
 		\end{center}	
                     \item MongoDB está preparado para escalar fácilmente de manera horizontal
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/21}
+		\includegraphics[width=7cm]{./Imagenes/21}
 		\end{center}
                      \item MongoDB está preparado para escalar fácilmente de manera horizontal
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/22}
+		\includegraphics[width=7cm]{./Imagenes/22}
 		\end{center}
                      \item En PowerShell ejecutar el siguiente comando ,Verificar la eliminación del contenedor con ejecutando
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/23}
+		\includegraphics[width=7cm]{./Imagenes/23}
 		\end{center}	
                       \item  Seguidamente ejecutar el comando:Como respuesta se visualizará un ID que corresponde al contenedor
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/24}
+		\includegraphics[width=7cm]{./Imagenes/24}
 		\end{center}	
                      \item Para conectar  a nuestro localhost 
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/25}
+		\includegraphics[width=7cm]{./Imagenes/25}
 		\end{center}		
 	          \end{itemize}
 \subsection{Inserción y consulta de datos}
                      \begin{itemize}
 		\item conexion de Mongo,instancia de Mongo Corriendo dentro de este contenedor docker 
                       \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/26}
+		\includegraphics[width=7cm]{./Imagenes/26}
 		\end{center}	
 		\item Se hace una prueba de Mongo DB,disparar ,para que asi  la base de datos consiga obtener la prueba de recoleccion de datos 
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/27}
+		\includegraphics[width=7cm]{./Imagenes/27}
 		\end{center}	
                   
 	          \end{itemize}
@@ -205,7 +205,7 @@ Las codificaciones más habituales de estos documentos suelen ser XML, YAML o JS
 \begin{center}
 	\includegraphics[width=9cm]{./Imagenes/documental2}
 \end{center}	
-.\\
+En la imagen podemos ver un ejemplo de un documento de tipo JSON describe un libro.\cite{imagen}\\\\
 \textbf{ Factores que influyen en la aceptación de una BD NoSQL documental :}
 \begin{itemize}
 		\item Adopción de un nuevo paradigma: Este factor de adaptarse al concepto de NoSQL, resulta ser relativamente difícil, ya que la gran mayoría de compañías se encuentran más familiarizadas con las bases de datos relacionales.
