--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -74,7 +74,7 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 	          \begin{itemize}
 		\item Una base de datos es una colección de datos organizados según un determinado criterio
 		\item Estos datos se pueden leer, crear, actualizar y borrar
-		\item También existen motores de base de datos que nos permiten hacer todas estas operaciones de forma más fácil
+		\item También existen motores de base de datos que nos permiten hacer todas estas operaciones de forma más fácil..\cite{Nicolas}
 	          \end{itemize}
 \subsection{Tipos de base de datos}
 	          \begin{itemize}
