--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -88,7 +88,7 @@ Dia a día el manejo de la información se hace más complejo; diferentes factor
 	          \begin{itemize}
 		\item Desde su definición vemos que una base de datos puede ser relacional si cumple con algo conocido como el modelo relacional.
                      \item En la definición de modelo relacional nos podemos quedar con la idea de tablas que tienen columnas para describir los datos que están relacionados entre si.
-		\item Ejemplo modelo relacional:
+		\item Ejemplo modelo relacional:\cite{Nicolas}
                      \begin{center}
 		\includegraphics[width=9cm]{./Imagenes/1}
 		\end{center}	
@@ -98,12 +98,12 @@ Este tipo de Base de datos es la respuesta a la necesidad de gestionar volúmene
 La cantidad de información manejada por las comunidades, redes sociales, buscadores, y muchos otros proyectos en el ámbito de la Web es enorme y abrumadora, lo que ha hecho que surjan nuevas arquitecturas de almacenamiento de información, que deben ser de alto rendimiento, escalables y distribuidas.\\\\
 	           \begin{itemize}
 		\item Se conoce como NoSQL (Not Only SQL) al grupo de bases de datos que no son relacionales
-                     \item Dentro de esta clasificación se encuentran las bases de clave/valor, orientadas a documentos, grafos, de grandes columnas .
+                     \item Dentro de esta clasificación se encuentran las bases de clave/valor, orientadas a documentos, grafos, de grandes columnas .\cite{Nicolas}
                      \begin{center}
 		\includegraphics[width=8cm]{./Imagenes/2}
 		\end{center}	
 		\item Este tipo de bases de datos escala de forma horizontal
-		\item Podemos utilizar muchas máquinas chiquitas para crecer y satisfacer las necesidades de los negocios actuales.
+		\item Podemos utilizar muchas máquinas chiquitas para crecer y satisfacer las necesidades de los negocios actuales.\cite{Nicolas}
                      \begin{center}
 		\includegraphics[width=8cm]{./Imagenes/3}
 		\end{center}	
@@ -213,7 +213,13 @@ En la imagen podemos ver un ejemplo de un documento de tipo JSON describe un lib
 		\item Costo-beneficio: es uno de los factores más importantes, debido al hecho de comparar si los beneficios que se obtendrán son mayores a los costos de implementarlo.                     
 \end{itemize}
 \subsection{Clave-Valor}
+\begin{itemize}
 
+                     \item Las bases de datos de clave/valor guardan valores en formato de diccionario o hash utilizando una clave como índice y su valor.\cite{Nicolas}
+                     \begin{center}
+		\includegraphics[width=8cm]{./Imagenes/30}
+		\end{center}	
+	          \end{itemize}
 
 \subsection{Grafos}
 \begin{itemize}
