--- a/TrabajoFinal-UII/Bibliografia.bib
+++ b/TrabajoFinal-UII/Bibliografia.bib
@@ -1,28 +1,3 @@
-@online{comparison,
-author={GeeksforGeeks},
-  title = {Difference between SQL and NoSQL} ,
-  url = {https://www.geeksforgeeks.org/difference-between-sql-and-nosql/},
-  note = {Accessed: 2019-06-20}
-}
-
-@book {proyecto,
-    author  = "Herranz Gómez, R.",
-    title   = "BASES DE DATOS NOSQL: ARQUITECTURA Y EJEMPLOS DE APLICACIÓN",
-    journal = "Universidad Carlos III de Madrid",
-    year    = "2014",
-    pages   = "159",
-}
-
-
-@online{kyocera,
-author={Kyocera Document Solutions},
-  title = {¿Qué son las bases de datos documentales?} ,
-  url = {https://smarterworkspaces.kyocera.es/blog/las-bases-datos-documentales/},
-  note = {Accessed: 2019-06-20}
-}
-
-
-
 @online{imagen,
 author={Amazon},
   title = {¿Qué es una base de datos de documentos?} ,
@@ -36,6 +11,48 @@ author={Nicolas Nisnardi},
   url = {https://github.com/nisnardi/comunidad-it-js/blob/master/contenido/mongodb.md},
   note = {Accessed: 2019-06-22}
 }
+
+
+@online{kyocera,
+author={Kyocera Document Solutions},
+  title = {¿Qué son las bases de datos documentales?} ,
+  url = {https://smarterworkspaces.kyocera.es/blog/las-bases-datos-documentales/},
+  note = {Accessed: 2019-06-20}
+}
+
+@online{comparison,
+author={GeeksforGeeks},
+  title = {Difference between SQL and NoSQL} ,
+  url = {https://www.geeksforgeeks.org/difference-between-sql-and-nosql/},
+  note = {Accessed: 2019-06-20}
+}
+
+@online{Fernando,
+author={Berzal, F.i},
+  title = {Base de datos NoSQL} ,
+  url = {https://elvex.ugr.es/decsai/information-systems/slides/32[porcentaje]20Data[porcentaje]20Access[porcentaje]20-[porcentaje]20NoSQL.pdf},
+  note = {Accessed: 2019-06-22}
+}
+
+@book {proyecto,
+    author  = "Herranz Gómez, R.",
+    title   = "BASES DE DATOS NOSQL: ARQUITECTURA Y EJEMPLOS DE APLICACIÓN",
+    journal = "Universidad Carlos III de Madrid",
+    year    = "2014",
+    pages   = "159",
+}
+@book {tesis,
+    author  = "Méndez Aguilar, S. A.",
+    title   = "USO DE BASES DE DATOS NOSQL DOCUMENTALES PARA CREAR SITIOS WEB DE ALTO RENDIMIENTO",
+    journal = "Universidad de San Carlos de Guatemala ",
+    year    = "2013",
+    pages   = "93",
+}
+
+
+
+
+
 
 
 
