--- a/TrabajoFinal-UII/Bibliografia.bib
+++ b/TrabajoFinal-UII/Bibliografia.bib
@@ -49,7 +49,12 @@ author={Berzal, F.i},
     pages   = "93",
 }
 
-
+@online{imagen2,
+author={Amazon},
+  title = {La bases de datos clave-valor definida} ,
+  url = {https://aws.amazon.com/es/nosql/key-value/},
+  note = {Accessed: 2019-06-20}
+}
 
 
 
