--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -49,7 +49,7 @@ In the present article the comparison made of NoSQL databases is described, desc
 
 \section {Introducción}\label{sec:1}
 
-Dia a día el manejo de la información se hace más complejo; diferentes factores hacen que las personas involucradas en el área busquen tecnologías que le ayuden con este problema. Las bases de datos relacionales son las mas comunes, pero en los últimos años ha aumentado el interés por las bases de datos NoSQL (Not only SQL), un nuevo conjunto de tecnologías que pueden contribuir al manejo de información.
+Dia a día el manejo de la información se hace más complejo; diferentes factores hacen que las personas involucradas en el área busquen tecnologías que le ayuden con este problema.\\\\ Las bases de datos relacionales son las mas comunes, pero en los últimos años ha aumentado el interés por las bases de datos NoSQL (Not only SQL), un nuevo conjunto de tecnologías que pueden contribuir al manejo de información.
 \par Por lo anterior, el presente documento hace una revisión de las tecnologías NoSQL, haciendo posible hacer una comparación.\\
 
 \par El resto de este articulo está organizado de la siguiente manera. En la Sección 2 se muestra los matriales y métodos usados para el desarrollo de este articulo. La Sección 3 se explican los resultados. Y finalmente, las conclusiones están en la Sección 4.
@@ -138,19 +138,19 @@ La cantidad de información manejada por las comunidades, redes sociales, buscad
 		\end{center}	
                      \item Seguidamente ejecutar el comando.Como respuesta se visualizará un ID que corresponde al contenedor:
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/16}
+		\includegraphics[width=7cm]{./Imagenes/16}
 		\end{center}	
                      \item Para conectar  a nuestro localhost 
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/17}
+		\includegraphics[width=7cm]{./Imagenes/17}
 		\end{center}	
                      \item Para exponer ese puerto para nuestro que podamos  acceder al contenedor
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/18}
+		\includegraphics[width=7cm]{./Imagenes/18}
 		\end{center}	
                      \item MongoDB está preparado para escalar fácilmente de manera horizontal
                      \begin{center}
-		\includegraphics[width=6cm]{./Imagenes/20}
+		\includegraphics[width=7cm]{./Imagenes/20}
 		\end{center}	
                     \item MongoDB está preparado para escalar fácilmente de manera horizontal
                      \begin{center}
@@ -166,22 +166,22 @@ La cantidad de información manejada por las comunidades, redes sociales, buscad
 		\end{center}	
                       \item  Seguidamente ejecutar el comando:Como respuesta se visualizará un ID que corresponde al contenedor
                      \begin{center}
-		\includegraphics[width=7cm]{./Imagenes/24}
+		\includegraphics[width=8cm]{./Imagenes/24}
 		\end{center}	
                      \item Para conectar  a nuestro localhost 
                      \begin{center}
-		\includegraphics[width=7cm]{./Imagenes/25}
+		\includegraphics[width=8cm]{./Imagenes/25}
 		\end{center}		
 	          \end{itemize}
 \subsection{Inserción y consulta de datos}
                      \begin{itemize}
 		\item conexion de Mongo,instancia de Mongo Corriendo dentro de este contenedor docker 
                       \begin{center}
-		\includegraphics[width=7cm]{./Imagenes/26}
+		\includegraphics[width=8cm]{./Imagenes/26}
 		\end{center}	
 		\item Se hace una prueba de Mongo DB,disparar ,para que asi  la base de datos consiga obtener la prueba de recoleccion de datos 
                      \begin{center}
-		\includegraphics[width=7cm]{./Imagenes/27}
+		\includegraphics[width=8cm]{./Imagenes/27}
 		\end{center}	
                   
 	          \end{itemize}
@@ -189,7 +189,7 @@ La cantidad de información manejada por las comunidades, redes sociales, buscad
 \subsection{Documental}
  La popularidad del término "base de datos orientada a documentos" o "almacén de documentos" ha crecido a la par con el uso del término NoSQL.\\
 \\ Una base de datos NoSQL documental sirve para gestionar información orientada a documentos o datos semi-estructurados, que se almacenarán en forma de documento.\cite{tesis}
-\\\\Normalmente los documentos se estructuran dentro de una serie de contenedores llamadas colecciones (en inglés “collections”) que son proporcionados por el sistema gestor documental. Estas utilizan punteros para el acceso de la información almacenada en la base de datos, esto se realiza sin la ayuda de una estructura entidad relación predeterminada, como en el caso de las bases de datos relacionales.\\
+\\\\Normalmente los documentos se estructuran dentro de una serie de contenedores llamadas colecciones (en inglés “collections”) que son proporcionados por el sistema gestor documental. Estas utilizan punteros para el acceso de la información almacenada en la base de datos, esto se realiza sin la ayuda de una estructura entidad relación predeterminada, como en el caso de las bases de datos relacionales.\\\\
 La búsqueda de la información se realiza con base al contenido del documento. \\\\
 Las codificaciones más habituales de estos documentos suelen ser XML, YAML o JSON, pero también se pueden almacenar en formato Word o PDF. \cite{proyecto} Las bases de datos de tipo documental son una forma moderna de almacenar datos en formato JSON en lugar de filas y columnas como en las bases de datos relacionales; y esto permite expresar los datos en su forma natural. \\\\
 \begin{center}
@@ -231,7 +231,7 @@ En las BD de clave valor existen los“contenedores”, y dentro de ellos se pue
 		\item Permiten el escalado horizontal a escalas que otros tipos de bases de datos no pueden alcanzar.                
 \end{itemize}
   \begin{center}
-	\includegraphics[width=8cm]{./Imagenes/clave1}
+	\includegraphics[width=9cm]{./Imagenes/clave1}
 \end{center}	
 En la imagen podemos ver un diagrama de datos almacenados como pares clave-valor en DynamoDB.\cite{imagen2}\\\\
 \textbf{Bases de Datos de Clave-Valor más conocidas :}
