--- a/TrabajoFinal-UII/InformeLaboratorio01.tex
+++ b/TrabajoFinal-UII/InformeLaboratorio01.tex
@@ -251,7 +251,16 @@ Los almacenes de llaves valor son útiles para operaciones sencillas, que se bas
                      \begin{center}
 		\includegraphics[width=8cm]{./Imagenes/4}
 		\end{center}	
+		
+		\item El modelo en grafo es útil cuando los datos a almacenar tienen multitud de interrelaciones entre sí, y cuando la importancia recae más en las interrelaciones que se establecen entre los datos, que en los propios datos en sí. En consecuencia, este tipo de bases de datos tiende a almacenar pocos datos de los objetos del mundo real que se desean representar pero muchos datos sobre sus interrelaciones, a diferencia de lo que acostumbra a suceder en las bases de datos relacionales, donde hay muchos datos de los objetos (representados mayoritariamente en las propiedades o atributos de las relaciones) y pocas interrelaciones entre los objetos (representadas mediante claves foráneas).
+		\begin{center}
+		\includegraphics[width=8cm]{./Imagenes/grafos1}
+		\end{center}	
+		
+		
+		
 	          \end{itemize}
+	          
 .
 \subsection{Tabular (Column-Store)}
 \begin{itemize}
